--- a/ia/main.css
+++ b/ia/main.css
@@ -2,7 +2,7 @@
     transition: 0.4s;
 }
 
-html, body {
+html, body, #main-box {
     margin: 0px;
     height: 100%;
     width: 100%;
@@ -11,6 +11,27 @@ html, body {
     align-items: center;
     justify-content: center;
 }
+
+#main-box {
+    width: auto;
+}
+
+.frame {
+    border: 8px solid #898989;
+    border-radius: 15px;
+    background-color: #898989;
+    transition: 0.15s;
+}
+
+    .frame > div {
+        border-radius: 10px;
+        background: #c9caca;
+        margin: 0;
+    }
+
+    .button > div:hover {
+        background-color: #fff;
+    }
 
 h1 {
     font-size: 72px;
@@ -38,93 +59,80 @@ body > div {
     grid-template-columns: repeat(4, 24.25%);
 }
 
-    .game-box > div:hover {
-        background-color: #fff;
-    }
-
     .game-box > div {
         padding: 0 10px 100% 10px;
-        background-color: #c9caca;
         border-radius: 15px;
         display: grid;
         place-items: center;
-        transition: 0.15s;
-    }
-
-    .game-box > div {
-        font-family: sans-serif;
-        font-size: 24px;
-        font-weight: bold;
     }
 
 .ctrl-button {
     width: 64px;
     height: 64px;
-    border: 8px solid #898989;
-    border-radius: 15px;
-    background-color: #898989;
-    transition: 0.15s;
 }
 
-    .ctrl-button > div:hover {
-        background-color: #fff;
-    }
-
     .ctrl-button > div {
-        width: 64px;
+        width: 100%;
         height: 100%;
-        border-radius: 10px;
-        background: #c9caca;
-        margin: 0;
     }
 
 .icon-bar {
-    width: 360px;
+    max-width: 360px;
+    height: 64px;
     display: flex;
     flex-flow: row;
     gap: 8px;
     justify-content: start;
 }
 
+    .icon-bar > div {
+        width: 64px;
+        height: 100%;
+    }
+
 .ctrl-console {
     margin-top: 60px;
+    transition: 0.15s;
 }
 
 .top-console {
     margin-bottom: 60px;
+    transition: 0.15s;
+}
+
+.console {
+    width: 100%;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
 }
 
-
-
 @media only screen and (max-width: 620px) {
-    body > div {
-        width: 400px;
+    .frame {
+        border-width: 7px;
     }
 
     .game-box {
+        width: 400px;
         height: 400px;
+        border-width: 23px;
     }
 
     .ctrl-button {
         width: 48px;
         height: 48px;
     }
-}
 
-@media only screen and (max-height: 740px) {
-    body > div {
-        width: 400px;
-    }
-
-    .game-box {
-        height: 400px;
-    }
-
-    .ctrl-button {
-        width: 48px;
+    .icon-bar {
+        max-width: 270px;
         height: 48px;
+    }
+
+    .ctrl-console {
+        margin-top: 45px;
+    }
+
+    .top-console {
+        margin-bottom: 45px;
     }
 }
