--- a/ia/main.css
+++ b/ia/main.css
@@ -33,9 +33,9 @@ html, body, #main-box {
         margin: 0;
     }
 
-    .button > div:hover {
-        background-color: #fff;
-    }
+.button > div:hover {
+    background-color: #fff;
+}
 
 h1 {
     font-size: 72px;
@@ -78,7 +78,12 @@ body > div {
     .ctrl-button > div {
         width: 100%;
         height: 100%;
+        transition: box-shadow 15ms;
     }
+
+        .ctrl-button > div:active {
+            box-shadow: -2px 3px 0px #000;
+        }
 
 .icon-bar {
     max-width: 360px;
