--- a/ia/index.css
+++ b/ia/index.css
@@ -144,264 +144,11 @@ clock {
 
     clock:before {
         content: attr(data-before);
-        animation: 1s 0.6s 60 timer_beat;
     }
 
-@keyframes timer_beat {
-    40%, 80% {
-        transform: none;
+    clock.beat:before {
+        animation: 1s infinite timer_beat;
     }
-
-    50% {
-        transform: scale(1.125);
-    }
-}
-
-@keyframes timer_countdown {
-    0% {
-        content: "60";
-    }
-
-    1.66667% {
-        content: "59";
-    }
-
-    3.33333% {
-        content: "58";
-    }
-
-    5% {
-        content: "57";
-    }
-
-    6.66667% {
-        content: "56";
-    }
-
-    8.33333% {
-        content: "55";
-    }
-
-    10% {
-        content: "54";
-    }
-
-    11.66667% {
-        content: "53";
-    }
-
-    13.33333% {
-        content: "52";
-    }
-
-    15% {
-        content: "51";
-    }
-
-    16.66667% {
-        content: "50";
-    }
-
-    18.33333% {
-        content: "49";
-    }
-
-    20% {
-        content: "48";
-    }
-
-    21.66667% {
-        content: "47";
-    }
-
-    23.33333% {
-        content: "46";
-    }
-
-    25% {
-        content: "45";
-    }
-
-    26.66667% {
-        content: "44";
-    }
-
-    28.33333% {
-        content: "43";
-    }
-
-    30% {
-        content: "42";
-    }
-
-    31.66667% {
-        content: "41";
-    }
-
-    33.33333% {
-        content: "40";
-    }
-
-    35% {
-        content: "39";
-    }
-
-    36.66667% {
-        content: "38";
-    }
-
-    38.33333% {
-        content: "37";
-    }
-
-    40% {
-        content: "36";
-    }
-
-    41.66667% {
-        content: "35";
-    }
-
-    43.33333% {
-        content: "34";
-    }
-
-    45% {
-        content: "33";
-    }
-
-    46.66667% {
-        content: "32";
-    }
-
-    48.33333% {
-        content: "31";
-    }
-
-    50% {
-        content: "30";
-    }
-
-    51.66667% {
-        content: "29";
-    }
-
-    53.33333% {
-        content: "28";
-    }
-
-    55% {
-        content: "27";
-    }
-
-    56.66667% {
-        content: "26";
-    }
-
-    58.33333% {
-        content: "25";
-    }
-
-    60% {
-        content: "24";
-    }
-
-    61.66667% {
-        content: "23";
-    }
-
-    63.33333% {
-        content: "22";
-    }
-
-    65% {
-        content: "21";
-    }
-
-    66.66667% {
-        content: "20";
-    }
-
-    68.33333% {
-        content: "19";
-    }
-
-    70% {
-        content: "18";
-    }
-
-    71.66667% {
-        content: "17";
-    }
-
-    73.33333% {
-        content: "16";
-    }
-
-    75% {
-        content: "15";
-    }
-
-    76.66667% {
-        content: "14";
-    }
-
-    78.33333% {
-        content: "13";
-    }
-
-    80% {
-        content: "12";
-    }
-
-    81.66667% {
-        content: "11";
-    }
-
-    83.33333% {
-        content: "10";
-    }
-
-    85% {
-        content: "9";
-    }
-
-    86.66667% {
-        content: "8";
-    }
-
-    88.33333% {
-        content: "7";
-    }
-
-    90% {
-        content: "6";
-    }
-
-    91.66667% {
-        content: "5";
-    }
-
-    93.33333% {
-        content: "4";
-    }
-
-    95% {
-        content: "3";
-    }
-
-    96.66667% {
-        content: "2";
-    }
-
-    98.33333% {
-        content: "1";
-    }
-
-    100% {
-        content: "0";
-    }
-}
 
 @keyframes timer_beat {
     40%, 80% {
