--- a/ia/index.css
+++ b/ia/index.css
@@ -48,6 +48,7 @@ html, body, #main-box {
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
     }
 
 .button > div:hover {
@@ -136,10 +137,14 @@ body > div {
 
 /*timer*/
 clock {
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
+    position: relative;
+    overflow: hidden;
 }
 
     clock:before {
@@ -148,6 +153,15 @@ clock {
 
     clock.beat:before {
         animation: 1s infinite timer_beat;
+    }
+
+    clock:after {
+        content: "";
+        background: conic-gradient( rgba(0, 0, 0, 0.4) var(--time-left), rgba(0, 0, 0, 0) var(--time-left));
+        position: absolute;
+        opacity: 0.8;
+        height: 100%;
+        width: 100%;
     }
 
 @keyframes timer_beat {
