--- a/ia/index.css
+++ b/ia/index.css
@@ -148,20 +148,20 @@ clock {
 }
 
     clock:before {
-        content: attr(data-before);
-    }
-
-    clock.beat:before {
-        animation: 1s infinite timer_beat;
-    }
-
-    clock:after {
         content: "";
-        background: conic-gradient( rgba(0, 0, 0, 0.4) var(--time-left), rgba(0, 0, 0, 0) var(--time-left));
+        background: conic-gradient( rgba(0, 0, 0, 0.3) var(--time-left), rgba(0, 0, 0, 0.1) var(--time-left));
         position: absolute;
         opacity: 0.8;
         height: 100%;
         width: 100%;
+    }
+
+    clock:after {
+        content: attr(data-before);
+    }
+
+    clock.beat:after {
+        animation: 1s infinite timer_beat;
     }
 
 @keyframes timer_beat {
