--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	/*box-sizing: border-box;*/
@@ -22,11 +22,6 @@ header h4{
 	font-size: 1.6rem;
 }
 
-
-
-
-
-
 .intro {
 	position: fixed;
 	z-index: 1;
@@ -47,7 +42,6 @@ header h4{
 	text-align: center;
 }
 
-
 .logo {
 	position: relative;
 	display: inline-block;
@@ -63,7 +57,7 @@ header h4{
 }
 
 .logo.fade {
-	bottom: 150px;
+	bottom: 40px;
 	opacity: 0;
-	transition: ease-in-out 3s;
+	transition: ease-in-out 500ms;
 }
