--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -13,8 +13,7 @@ html, body, #main-box {
 }
 
 .st0 {
-    /*fill: #898989;*/
-    fill: #000;
+    fill: #898989;
 }
 
 #main-box {
@@ -80,13 +79,12 @@ body > div {
     align-content: space-between;
     gap: 5px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
 }
 
     .game-box > div {
-        padding: 10px;
-        height: calc(100% - 20px);
-        border-radius: 15px;
+        padding: 0 10px 100% 10px;
+        display: grid;
+        place-items: center;
     }
 
 .ctrl-button {
