--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -1,63 +1,78 @@
 * {
-	margin: 0;
-	padding: 0;
-	/*box-sizing: border-box;*/
-	font-family: poppins, sans-serif;
+    margin: 0;
+    padding: 0;
+    /*box-sizing: border-box;*/
+    font-family: poppins, sans-serif;
     font-weight: 300;
     font-style: normal;
 }
 
-header{
-	position: relative;
-	left: 0;
-	top: 0;
-	width: 1005;
-	height: 80px;
-	
-}
-header h4{
-	position: absolute;
-	left: 10%;
-	bottom: 1rem;
-	font-size: 1.6rem;
+header {
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 1005;
+    height: 80px;
 }
 
+    header h4 {
+        position: absolute;
+        left: 10%;
+        bottom: 1rem;
+        font-size: 1.6rem;
+    }
+
 .intro {
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	background-color: #FFFFFF;
-	transition: 3s;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #FFFFFF;
+    transition: 3s;
+}
+
+    .intro.fade {
+        animation: 300ms forwards intro-fade;
+    }
+
+@keyframes intro-fade {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
 
 .logo-header {
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: #161616;
-	text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #161616;
+    text-align: center;
 }
 
 .logo {
-	position: relative;
-	display: inline-block;
-	bottom: -20px;
-	opacity: 0;
-	font-family: Bahnschrift SemiBold, monospace;
+    position: relative;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+    font-family: Bahnschrift SemiBold, monospace;
 }
 
-.logo.active {
-	bottom: 0;
-	opacity: 1;
-	transition: ease-in-out 1s;
-}
+    .logo.active {
+        bottom: 0;
+        opacity: 1;
+        transition: ease-in-out 1s;
+    }
 
-.logo.fade {
-	bottom: 40px;
-	opacity: 0;
-	transition: ease-in-out 500ms;
-}
+    .logo.fade {
+        bottom: 40px;
+        opacity: 0;
+        transition: ease-out 300ms;
+    }
