--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -81,14 +81,15 @@ body > div {
     display: grid;
     justify-content: space-between;
     align-content: space-between;
-    gap: 5px;
+    gap: 7px;
     grid-template-columns: repeat(4, 1fr);
 }
 
     .game-box > div {
-        padding: 0 10px 100% 10px;
-        display: grid;
-        place-items: center;
+        padding: 10px;
+        height: calc(100% - 20px);
+        /*display: grid;
+        place-items: center;*/
     }
 
 .ctrl-button {
@@ -189,7 +190,7 @@ clock {
     .game-box {
         width: 400px;
         height: 400px;
-        gap: 4px;
+        gap: 5px;
         border-width: 23px;
     }
 
