--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -24,6 +24,14 @@ html, body, #main-box {
     width: auto;
 }
 
+.box {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border-width: 5%;
+    
+}
+
 .frame {
     border: 8px solid #898989;
     border-radius: 15px;
