--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -94,10 +94,9 @@ body > div {
 }
 
     .game-box > div {
-        padding: 10px;
-        height: calc(100% - 20px);
-        /*display: grid;
-        place-items: center;*/
+        padding: 0 10px 100% 10px;
+        display: grid;
+        place-items: center;
     }
 
 .ctrl-button {
