--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -21,8 +21,8 @@ html, body, #main-box {
 }
 
 .box {
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 75%;
     box-sizing: border-box;
     border-width: 5%;
     
@@ -83,15 +83,14 @@ body > div {
     width: 500px;
     /*grid*/
     display: grid;
-    justify-content: space-between;
-    align-content: space-between;
-    gap: 7px;
+    gap: 12px;
     grid-template-columns: repeat(4, 1fr);
 }
 
     .game-box > div {
-        padding: 0 10px 100% 10px;
-        display: grid;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1;
         place-items: center;
     }
 
