--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -95,10 +95,9 @@ body > div {
 
 
     .game-box > div {
-        width: 100%;
-        height: 100%;
-        aspect-ratio: 1;
-        place-items: center;
+        position: relative;
+        overflow: hidden;
+        padding: 0 10px 100% 10px;
     }
 
 .game-button > div {
