--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -69,6 +69,12 @@ div {
     background-color: #fff;
 }
 
+.button > div:active {
+    box-shadow: 0px 0px 13px #555a;
+    width: 97%;
+    height: 97%;
+}
+
 h1 {
     font-size: 72px;
     font-family: sans-serif;
@@ -91,23 +97,20 @@ body > div {
     display: grid;
     gap: 12px;
     grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
 }
 
-
-    .game-box > div {
-        position: relative;
-        overflow: hidden;
-        padding: 0 10px 100% 10px;
+    .game-box > .game-button {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1;
+        place-items: center;
     }
 
-.game-button > div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 88%;
-    height: 88%;
-}
+    .game-box > .game-button:active {
+        transition: 15ms;
+    }
 
 .ctrl-button {
     width: 64px;
@@ -118,12 +121,6 @@ body > div {
         width: 100%;
         height: 100%;
         transition: box-shadow 15ms;
-    }
-
-    .ctrl-button.button > div:active {
-        box-shadow: 0px 0px 13px #555a;
-        width: 62px;
-        height: 62px;
     }
 
 .icon-bar {
@@ -216,10 +213,8 @@ clock {
         height: 48px;
     }
 
-        .ctrl-button.button > div:active {
+        .button > div:active {
             box-shadow: 0px 0px 11px #555a;
-            width: 46px;
-            height: 46px;
         }
 
     .icon-bar {
