css, timer count effect, start box

--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -102,7 +102,7 @@ body > div {
         place-items: center;
     }
 
-    .game-box > .game-button:active {
+    .game-box.button > .game-button:active {
         transition: 15ms;
     }
 
@@ -239,4 +239,9 @@ clock {
 
 .hidden {
     visibility: hidden;
+}
+
+.disable {
+    pointer-events: none;
+    cursor: default;
 }
