--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -128,6 +128,12 @@ body > div {
         height: 48px;
     }
 
+    .info-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
 .console {
     width: 100%;
     display: flex;
