--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -57,7 +57,7 @@ html, body, #main-box {
     }
 
 .button > div:hover {
-    background-color: #fff;
+    background-color: #fff !important;
 }
 
 .button > div:active {
