--- a/ia/css/leaderboard.css
+++ b/ia/css/leaderboard.css
@@ -1,38 +1,37 @@
-﻿
+
 
 .top3 {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  color: #4B4168;
 }
-.top3 .item {
-  box-sizing: border-box;
-  position: relative;
-  background: white;
-  width: 9rem;
-  height: 10rem;
-  text-align: center;
-  padding: 2.8rem 0 0;
-  margin: 1rem 1rem 2rem;
-  border-radius: 0.5rem;
-  transform-origin: bottom;
-  cursor: pointer;
-  transition: transform 200ms ease-in-out;
-  box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.1), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
-}
-.top3 .item .pic {
-  position: absolute;
-  top: -2rem;
-  left: 2.5rem;
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  background-size: cover;
-  background-position: center;
-  margin-right: 1rem;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2), 0 1rem 1rem -0.5rem rgba(0, 0, 0, 0.3);
-}
+    .top3 .item {
+        box-sizing: border-box;
+        position: relative;
+        background: white;
+        width: 9rem;
+        height: 10rem;
+        text-align: center;
+        padding: 2.8rem 0 0;
+        margin: 1rem 1rem 2rem;
+        border-radius: 0.5rem;
+        transform-origin: bottom;
+        cursor: pointer;
+        transition: transform 200ms ease-in-out;
+        box-shadow: 0 0 13px #555a;
+    }
+        .top3 .item .pic {
+            position: absolute;
+            top: -2rem;
+            left: 2.5rem;
+            width: 4rem;
+            height: 4rem;
+            border-radius: 50%;
+            background-size: cover;
+            background-position: center;
+            margin-right: 1rem;
+            box-shadow: 0 0 13px #555a;
+        }
     .top3 .item .pos {
         font-weight: 900;
         font-size: 1.5rem;
@@ -82,7 +81,7 @@
         transform-origin: left;
         cursor: pointer;
         transition: transform 200ms ease-in-out;
-        box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.1), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
+        box-shadow: 0 0 13px #555a;
     }
     .list .item .pos {
         font-weight: 900;
@@ -96,15 +95,15 @@
         opacity: 0.6;
         transition: opacity 200ms ease-in-out;
     }
-.list .item .pic {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  background-size: cover;
-  background-position: center;
-  margin-right: 1rem;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2), 0 1rem 1rem -0.5rem rgba(0, 0, 0, 0.3);
-}
+        .list .item .pic {
+            width: 4rem;
+            height: 4rem;
+            border-radius: 50%;
+            background-size: cover;
+            background-position: center;
+            margin-right: 1rem;
+            box-shadow: 0 0 13px #555a;
+        }
     .list .item .name {
         flex-grow: 2;
         flex-basis: 10rem;
