--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -84,6 +84,7 @@ body > div {
     background-color: #898989;
     height: 500px;
     width: 500px;
+    position: relative;
     /*grid*/
     display: grid;
     gap: 12px;
@@ -92,9 +93,9 @@ body > div {
     align-items: center;
 }
 
-.game-box.pointer {
-    cursor: pointer;
-}
+    .game-box.pointer {
+        cursor: pointer;
+    }
 
     .game-box > .game-button {
         width: 100%;
@@ -132,11 +133,11 @@ body > div {
         height: 48px;
     }
 
-    .info-box {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
+.info-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 .console {
     width: 100%;
@@ -193,6 +194,63 @@ clock {
     }
 }
 
+.game-start-count {
+    transition: 0ms;
+    visibility: hidden;
+    position: absolute;
+    z-index: 10;
+    overflow: hidden !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    height: 40%;
+    background-color: #fde9e8 !important;
+    stroke: #942994;
+    stroke-width: 5;
+
+    mask-image: url(../svg/icon/start.svg);
+    mask-size: 100%;
+    mask-repeat: no-repeat;
+    mask-position: center;
+
+    -webkit-mask-image: url(../svg/icon/start.svg);
+    -webkit-mask-size: 100%;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+}
+
+    .game-start-count::after {
+        --top: 21%;
+        --bottom: 58%;  /* 100 - 21 - 21 = 58 */
+        content: "";
+        position: absolute;
+        z-index: 30;
+        top: var(--top);
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.125);
+        transform: translateY(var(--bottom));
+    }
+
+    .game-start-count.count {
+        visibility: visible;
+    }
+
+        .game-start-count.count::after {
+            animation: var(--count-time) linear forwards timer_indicator;
+        }
+
+@keyframes timer_indicator {
+    from {
+        transform: translateY(0%);
+    }
+    to {
+        transform: translateY(var(--bottom));
+    }
+}
+
 @media only screen and (max-width: 620px) {
     .frame {
         border-width: 7px;
@@ -214,19 +272,19 @@ clock {
         height: 48px;
     }
 
-        .button > div:active {
-            box-shadow: 0px 0px 11px #555a;
-        }
+    .button > div:active {
+        box-shadow: 0px 0px 11px #555a;
+    }
 
     .icon-bar {
         max-width: 270px;
         height: 48px;
     }
 
-    .icon-bar > div {
-        width: 34px;
-        height: 34px;
-    }
+        .icon-bar > div {
+            width: 34px;
+            height: 34px;
+        }
 
     .console:first-child {
         margin-bottom: 45px;
@@ -296,7 +354,7 @@ clock {
 
 
 .popup.active .overlay {
-   /*display: block;*/
+    /*display: block;*/
 }
 
 .popup.active .content {
