--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -29,13 +29,17 @@ header {
 
 .intro {
     position: fixed;
-    z-index: 1;
+    z-index: 50;
     left: 0;
     top: 0;
     width: 100%;
     height: 100vh;
     background-color: #FFFFFF;
     transition: 3s;
+}
+
+.intro * {
+    user-select: none;
 }
 
     .intro.fade {
