add end page to index

--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -375,6 +375,10 @@ clock {
     visibility: hidden;
 }
 
+.disable {
+    display: none;
+}
+
 .popup .overlay {
     position: fixed;
     top: 0px;
