--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -16,7 +16,7 @@ html, body, .main-box {
 }
 
 .main-box {
-    /* transform: translateY(-50%); */
+    margin: 10px 0;
     width: auto;
 }
 
@@ -323,7 +323,8 @@ clock {
     }
 }
 
-@media only screen and (max-width: 620px) {
+@media only screen and (max-width: 620px),
+        only screen and (max-height: 812px) {
     .frame {
         border-width: 7px;
     }
