--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -323,8 +323,8 @@ clock {
     }
 }
 
-@media only screen and (max-width: 620px),
-        only screen and (max-height: 812px) {
+@media only screen and (max-width: 620px) and (min-width: 420px),
+        only screen and (max-height: 812px) and (min-height: 710px) {
     .frame {
         border-width: 7px;
     }
@@ -369,6 +369,57 @@ clock {
 
     clock {
         font-size: 30px !important;
+    }
+}
+
+
+
+@media only screen and (max-width: 420px),
+        only screen and (max-height: 710px) {
+    .frame {
+        border-width: 5px;
+    }
+
+        .frame > div {
+            font-size: 23px;
+        }
+
+    .game-box {
+        width: 300px;
+        height: 300px;
+        gap: 7px;
+        border-width: 15px;
+    }
+
+    .ctrl-button {
+        width: 48px;
+        height: 48px;
+    }
+
+    .button > div:active {
+        box-shadow: 0px 0px 5px #555a;
+    }
+
+    .icon-bar {
+        max-width: 240px;
+        height: 48px;
+    }
+
+        .icon-bar > div {
+            width: 38px;
+            height: 38px;
+        }
+
+    .console:first-child {
+        margin-bottom: 30px;
+    }
+
+    .console:last-child {
+        margin-top: 30px;
+    }
+
+    clock {
+        font-size: 26px !important;
     }
 }
 
