--- a/ia/css/index.css
+++ b/ia/css/index.css
@@ -1,3 +1,7 @@
+:root {
+    --start-counter-z-index: 10;
+}
+
 * {
     transition: 0.2s;
 }
@@ -272,7 +276,7 @@ clock {
 
     visibility: hidden;
     position: absolute;
-    z-index: 10;
+    z-index: var(--start-counter-z-index);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -336,6 +340,11 @@ clock {
     to {
         transform: translateY(var(--bottom));
     }
+}
+
+/* other */
+.colorful-text {
+    color: var(--color);
 }
 
 @media only screen and (max-width: 620px) and (min-width: 420px),
@@ -471,7 +480,7 @@ clock {
     transform: translate(-50%, -50%) scale(0);
     background: #fff;
     width: 450px;
-    z-index: 2;
+    z-index: calc(var(--start-counter-z-index) + 10);
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
@@ -509,19 +518,4 @@ h3 {
     display: inline-block;
     text-align: center;
     font-size: 25px;
-}
-
-
-/* for test */
-.line {
-    /* font-size: 32px; */
-    margin: 4px;
-}
-.text {
-    color: var(--color);
-}
-.one-line {
-    overflow: hidden; 
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
