--- a/ia/css/style.css
+++ b/ia/css/style.css
@@ -65,6 +65,7 @@ header {
 
 .logo-header {
     position: absolute;
+    width: fit-content;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
